<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bookish</string>
    <string name="library">Library</string>
    <string name="lists">Lists</string>
    <string name="book_name">Book Name</string>
    <string name="author">Author</string>
    <string name="settings">Settings</string>
    <string name="nav_icon">Navigation Icon</string>
    <string name="save">Save</string>
    <string name="expand">Expand</string>
    <string name="auto_night_mode">Auto Night Mode</string>
    <string name="highlight">Highlight Color</string>
    <string name="read_progress">Reading Progress</string>
    <string name="read_preferences">Reading Preferences</string>
    <string name="display_settings">Display Settings</string>
    <string name="font_size">Font Size</string>
    <string name="margin_size">Margin Size</string>
    <string name="library_tag">library_tag</string>
    <string name="lists_tag">lists_tag</string>
    <string name="settings_tag">settings_tag</string>
    <string name="scroll_tag">scroll_tag</string>
    <string-array name="dropdown_options1">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array name="dropdown_options2">
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
    <string-array name="dropdown_options3">
        <item>Page Number</item>
        <item>Percentage</item>
    </string-array>
    <string name="lists_favorite">Favorite</string>
    <string name="lists_to_read">To Read</string>
    <string name="lists_finished">Finished</string>
</resources>